--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>San Joaquin Valley Town Hall</title>
     <link rel="shortcut icon" href="images/favicon.ico" />
     <link rel="stylesheet" href="styles/c6_main.css" />
+    <link rel="Speakersheet" href="speakers/jquery.slicknav.java" />
   </head>
 
   <body>
