--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <title>San Joaquin Valley Town Hall</title>
     <link rel="shortcut icon" href="images/favicon.ico" />
-    <link rel="stylesheet" href="styles/c6_main.css" />
-    <link rel="Speakersheet" href="speakers/jquery.slicknav.java" />
-  </head>
+    <link rel="stylesheet" href="styles/main.css" />
 
+  </head>
+  
   <body>
     <header>
       <img src="images/town_hall_logo.gif" alt="Town Hall logo" height="80" />
@@ -16,6 +16,22 @@
         Celebrating our <span class="shadow">75<sup>th</sup></span> Year
       </h3>
     </header>
+    <!-- Navigation Menu -->
+<ul class="nav-menu">
+  <li><a href="#">Home</a></li>
+  <li><a href="#">Speakers</a></li>
+  <li><a href="#">Luncheons</a></li>
+  <li><a href="#">Tickets</a></li>
+  <li>
+    <a href="#">About Us</a>
+    <ul class="dropdown">
+      <li><a href="about/history.html">Our History</a></li>
+      <li><a href="about/board.html">Board of Directors</a></li>
+      <li><a href="about/past-speakers.html">Past Speakers</a></li>
+      <li><a href="about/contact.html">Contact Information</a></li>
+    </ul>
+  </li>
+</ul>
     <main>
       <section>
         <h2>Our Mission</h2>
@@ -84,7 +100,7 @@
       </aside>
     </main>
     <footer>
-      <p>&copy; 2025, Mansi Sangani San Joaquin Valley Town Hall, Avenel, NJ 07001</p>
+      <p>&copy; 2025, Preet Shah San Joaquin Valley Town Hall, Avenel, NJ 07001</p>
     </footer>
   </body>
 </html>
