--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       </aside>
     </main>
     <footer>
-      <p>&copy; 2025, Preet Shah San Joaquin Valley Town Hall, Avenel, NJ 07001</p>
+      <p>&copy; 2025, Mansi Sangani San Joaquin Valley Town Hall, Avenel, NJ 07001</p>
     </footer>
   </body>
 </html>
