--- a/index.html
+++ b/index.html
@@ -35,6 +35,27 @@
     </ul>
   </li>
 </ul>
+    <!-- Hamburger menu icon -->
+<div class="menu-toggle" id="menu-toggle">
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+</div>
+
+<!-- Navigation menu -->
+<ul class="nav-menu" id="nav-menu">
+  <li><a href="#">Home</a></li>
+  <li><a href="#">About</a></li>
+  <li>
+    <a href="#">Services</a>
+    <ul class="dropdown">
+      <li><a href="#">Web Design</a></li>
+      <li><a href="#">Development</a></li>
+    </ul>
+  </li>
+  <li><a href="#">Contact</a></li>
+</ul>
     <main>
       <section>
         <h2>Our Mission</h2>
