--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>San Joaquin Valley Town Hall</title>
     <link rel="shortcut icon" href="images/favicon.ico" />
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/slicknav.css" />
     <script src="scripts/jquery.slicknav.min.js"></script>
 
 
