--- a/index.html
+++ b/index.html
@@ -4,13 +4,9 @@
     <meta charset="utf-8" />
     <title>San Joaquin Valley Town Hall</title>
     <link rel="shortcut icon" href="images/favicon.ico" />
-    <link rel="stylesheet" href="styles/slicknav.css" />
-    <script src="scripts/jquery.slicknav.min.js"></script>
-
-
-
+    <link rel="stylesheet" href="styles/c6_main.css" />
   </head>
-  
+
   <body>
     <header>
       <img src="images/town_hall_logo.gif" alt="Town Hall logo" height="80" />
@@ -19,51 +15,6 @@
         Celebrating our <span class="shadow">75<sup>th</sup></span> Year
       </h3>
     </header>
-    <!-- Navigation Menu -->
-
-  <li><a href="#">Home</a></li>
-  <li><a href="#">Speakers</a></li>
-  <li><a href="#">Luncheons</a></li>
-  <li><a href="#">Tickets</a></li>
-  <li>
-    <a href="#">About Us</a>
-    <ul class="dropdown">
-      <li><a href="about/history.html">Our History</a></li>
-      <li><a href="about/board.html">Board of Directors</a></li>
-      <li><a href="about/past-speakers.html">Past Speakers</a></li>
-      <li><a href="about/contact.html">Contact Information</a></li>
-    </ul>
-  </li>
-</ul>
-    <!-- Hamburger menu icon -->
-    <script>
-  const toggle = document.getElementById('menu-toggle');
-  const menu = document.getElementById('nav-menu');
-
-  toggle.addEventListener('click', () => {
-    menu.classList.toggle('active');
-  });
-</script>
-<div class="menu-toggle" id="menu-toggle">
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-</div>
-
-<!-- Navigation menu -->
-<ul class="nav-menu" id="nav-menu">
-  <li><a href="#">Home</a></li>
-  <li><a href="#">About</a></li>
-  <li>
-    <a href="#">Services</a>
-    <ul class="dropdown">
-      <li><a href="#">Web Design</a></li>
-      <li><a href="#">Development</a></li>
-    </ul>
-  </li>
-  <li><a href="#">Contact</a></li>
-</ul>
     <main>
       <section>
         <h2>Our Mission</h2>
