--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
             conducted fieldwork in a number of countries in Africa.
           </p>
           <p>
-            <a href="speakers/c6_sampson.html">Read more.</a>&nbsp;<b
-              >Or meet us there!</b
+            <a href="speakers/c6_sampson.html">Read more.</a>
+            "&nbsp;" == $0
+            <b></b> Or meet us there!</b
             >
           </p>
         </article>
