--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </p>
           <p>
             <a href="speakers/c6_sampson.html">Read more.</a>
-            "&nbsp;" == $0
+            "&nbsp;" ==
             <b></b> Or meet us there!</b
             >
           </p>
