--- a/index.html
+++ b/index.html
@@ -48,11 +48,10 @@
             Natural History, steps to the podium. Sampson's research has focused
             on the ecology and evolution of late Cretaceous dinosaurs and he has
             conducted fieldwork in a number of countries in Africa.
-          </p>
+             </p>
           <p>
-            <a href="speakers/c6_sampson.html">Read more.</a>
-            "&nbsp;" ==
-            <b></b> Or meet us there!</b
+            <a href="speakers/c6_sampson.html">Read more.</a>&nbsp;<b
+              >Or meet us there!</b
             >
           </p>
         </article>
