--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8" />
     <title>San Joaquin Valley Town Hall</title>
     <link rel="shortcut icon" href="images/favicon.ico" />
-    <link rel="stylesheet" href="styles/slicknav.css" />
-
+    <link rel="stylesheet" href="styles/c6_main.css" />
   </head>
 
   <body>
@@ -49,9 +48,9 @@
             Natural History, steps to the podium. Sampson's research has focused
             on the ecology and evolution of late Cretaceous dinosaurs and he has
             conducted fieldwork in a number of countries in Africa.
-             </p>
+          </p>
           <p>
-            <a href="speakers/c7_sampson.html">Read more.</a>&nbsp;<b
+            <a href="speakers/c6_sampson.html">Read more.</a>&nbsp;<b
               >Or meet us there!</b
             >
           </p>
