--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>San Joaquin Valley Town Hall</title>
     <link rel="shortcut icon" href="images/favicon.ico" />
-    <link rel="stylesheet" href="styles/slicknav.css" />
+    <link rel="stylesheet" href="styles/slicknav_main.css" />
   </head>
 
   <body>
