--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8" />
     <title>San Joaquin Valley Town Hall</title>
     <link rel="shortcut icon" href="images/favicon.ico" />
-    <link rel="stylesheet" href="styles/c7_main.css" />
-  </head>
+    <link rel="stylesheet" href="styles/main.css" />
 
+  </head>
+  
   <body>
     <header>
       <img src="images/town_hall_logo.gif" alt="Town Hall logo" height="80" />
@@ -15,6 +16,24 @@
         Celebrating our <span class="shadow">75<sup>th</sup></span> Year
       </h3>
     </header>
+    <!-- Navigation Menu -->
+<ul class="nav-menu">
+  <li><a href="#">MENU</a></li>
+  <hr>
+  <hr>
+  <hr>
+  <hr>
+
+  <li>
+    <a href="#">About Us</a>
+    <ul class="dropdown">
+      <li><a href="MENU/Home.html">Our History</a></li>
+      <li><a href="MENU/Speakers.html">Board of Directors</a></li>
+      <li><a href="MENU/Luncheons.html">Past Speakers</a></li>
+      <li><a href="MENU/Tickets.html">Contact Information</a></li>
+    </ul>
+  </li>
+</ul>
     <main>
       <section>
         <h2>Our Mission</h2>
@@ -50,7 +69,7 @@
             conducted fieldwork in a number of countries in Africa.
           </p>
           <p>
-            <a href="speakers/c7_sampson.html">Read more.</a>&nbsp;<b
+            <a href="speakers/c6_sampson.html">Read more.</a>&nbsp;<b
               >Or meet us there!</b
             >
           </p>
@@ -77,7 +96,7 @@
         <h3>January<br /><a href="speakers/chua.html">Amy Chua</a></h3>
         <img src="images/chua75.jpg" alt="Amy Chua photo" />
         <h3>
-          February<br /><a href="speakers/c7_sampson.html">Scott Sampson</a>
+          February<br /><a href="speakers/c6_sampson.html">Scott Sampson</a>
         </h3>
         <img src="images/sampson75.jpg" alt="Scott Sampson photo" />
       </aside>
