--- a/index.html
+++ b/index.html
@@ -17,22 +17,23 @@
       </h3>
     </header>
     <!-- Navigation Menu -->
-<ul class="nav-menu">
-  <li><a href="#">MENU</a></li>
-  <hr>
-  <hr>
-  <hr>
-  <hr>
+<nav class="nav-menu">
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li>
+      <a href="#">About Us</a>
+      <ul class="dropdown">
+        <li><a href="MENU/Home.html">Our History</a></li>
+        <li><a href="MENU/Speakers.html">Board of Directors</a></li>
+        <li><a href="MENU/Luncheons.html">Past Speakers</a></li>
+        <li><a href="MENU/Tickets.html">Contact Information</a></li>
+      </ul>
+    </li>
+    <li><a href="tickets.html">Tickets</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
 
-  <li>
-    <a href="#">About Us</a>
-    <ul class="dropdown">
-      <li><a href="MENU/Home.html">Our History</a></li>
-      <li><a href="MENU/Speakers.html">Board of Directors</a></li>
-      <li><a href="MENU/Luncheons.html">Past Speakers</a></li>
-      <li><a href="MENU/Tickets.html">Contact Information</a></li>
-    </ul>
-  </li>
 </ul>
     <main>
       <section>
