--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="utf-8" />
     <title>San Joaquin Valley Town Hall</title>
     <link rel="shortcut icon" href="images/favicon.ico" />
-    <link rel="stylesheet" href="styles/main.css" />
-
+    <link rel="stylesheet" href="styles/c7_main.css" />
   </head>
-  
+
   <body>
     <header>
       <img src="images/town_hall_logo.gif" alt="Town Hall logo" height="80" />
@@ -16,33 +15,33 @@
         Celebrating our <span class="shadow">75<sup>th</sup></span> Year
       </h3>
     </header>
-    <!-- Navigation Menu -->
-<nav class="nav-menu">
-  <ul>
-    <li><a href="#">Home</a></li>
-    <li>
-      <a href="#">About Us</a>
-      <ul class="dropdown">
-        <li><a href="MENU/Home.html">Our History</a></li>
-        <li><a href="MENU/Speakers.html">Board of Directors</a></li>
-        <li><a href="MENU/Luncheons.html">Past Speakers</a></li>
-        <li><a href="MENU/Tickets.html">Contact Information</a></li>
-      </ul>
-    </li>
-    <li><a href="tickets.html">Tickets</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
 
-</ul>
+    <!-- Navigation Menu -->
+    <nav class="nav-menu">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li>
+          <a href="#">About Us</a>
+          <ul class="dropdown">
+            <li><a href="MENU/Home.html">Our History</a></li>
+            <li><a href="MENU/Speakers.html">Board of Directors</a></li>
+            <li><a href="MENU/Luncheons.html">Past Speakers</a></li>
+            <li><a href="MENU/Tickets.html">Contact Information</a></li>
+          </ul>
+        </li>
+        <li><a href="tickets.html">Tickets</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+
     <main>
       <section>
-        <h2>Our Mission</h2>
+        <h1>Our Mission</h1>
         <p>
           San Joaquin Valley Town Hall is a non-profit organization that is run
           by an all-volunteer board of directors. Our mission is to bring
           nationally and internationally renowned, thought-provoking speakers
-          who inform, educate, and entertain our audience! As one or our members
+          who inform, educate, and entertain our audience! As one of our members
           told us:
         </p>
         <blockquote>
@@ -50,17 +49,15 @@
           members. I think of it as the gift of knowledge...and that is
           priceless.&rdquo;
         </blockquote>
-        <h1>Speaker of the Month</h1>
+
+        <h2>Speaker of the Month</h2>
         <article>
-          <h2>Fossil Threads in the Web of Life</h2>
-          <img
-            src="images/sampson_dinosaur.jpg"
-            alt="Scott Sampson with dinosaur"
-          />
-          <h3>
+          <h3>Fossil Threads in the Web of Life</h3>
+          <img src="images/sampson_dinosaur.jpg" alt="Scott Sampson with dinosaur" />
+          <h4>
             February<br />
             Scott Sampson
-          </h3>
+          </h4>
           <p>
             What's 75 million years old and brand spanking new? A teenage
             Utahceratops! Come to the Saroyan, armed with your best dinosaur
@@ -70,9 +67,7 @@
             conducted fieldwork in a number of countries in Africa.
           </p>
           <p>
-            <a href="speakers/c6_sampson.html">Read more.</a>&nbsp;<b
-              >Or meet us there!</b
-            >
+            <a href="speakers/c6_sampson.html">Read more.</a>&nbsp;<b>Or meet us there!</b>
           </p>
         </article>
 
@@ -85,25 +80,23 @@
       </section>
 
       <aside>
-        <h1>This season's guest speakers</h1>
-        <h3>
-          October<br /><a href="speakers/brancaccio.html">David Brancaccio</a>
-        </h3>
+        <h2>This season's guest speakers</h2>
+        <h3>October<br /><a href="speakers/brancaccio.html">David Brancaccio</a></h3>
         <img src="images/brancaccio75.jpg" alt="David Brancaccio photo" />
-        <h3>
-          November<br /><a href="speakers/sorkin.html">Andrew Ross Sorkin</a>
-        </h3>
+
+        <h3>November<br /><a href="speakers/sorkin.html">Andrew Ross Sorkin</a></h3>
         <img src="images/sorkin75.jpg" alt="Andrew Ross Sorkin photo" />
+
         <h3>January<br /><a href="speakers/chua.html">Amy Chua</a></h3>
         <img src="images/chua75.jpg" alt="Amy Chua photo" />
-        <h3>
-          February<br /><a href="speakers/c6_sampson.html">Scott Sampson</a>
-        </h3>
+
+        <h3>February<br /><a href="speakers/c6_sampson.html">Scott Sampson</a></h3>
         <img src="images/sampson75.jpg" alt="Scott Sampson photo" />
       </aside>
     </main>
+
     <footer>
-      <p>&copy; 2025, Mansi Sangani San Joaquin Valley Town Hall, Avenel, NJ 07001</p>
+      <p>&copy; 2025, Mansi Sangani — San Joaquin Valley Town Hall, Avenel, NJ 07001</p>
     </footer>
   </body>
 </html>
