--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="utf-8" />
     <title>San Joaquin Valley Town Hall</title>
     <link rel="shortcut icon" href="images/favicon.ico" />
-    <link rel="stylesheet" href="styles/c7_main.css" />
+    <link rel="stylesheet" href="styles/c8_main.css" />
+    <link rel="stylesheet" href="styles/slicknav.css" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $('#nav_menu').slicknav({prependTo:"#mobile_menu"});
+      });
+    </script>
   </head>
 
   <body>
@@ -16,23 +23,23 @@
       </h3>
     </header>
 
-    <!-- Navigation Menu -->
-    <nav class="nav-menu">
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li>
-          <a href="#">About Us</a>
-          <ul class="dropdown">
-            <li><a href="MENU/Home.html">Our History</a></li>
-            <li><a href="MENU/Speakers.html">Board of Directors</a></li>
-            <li><a href="MENU/Luncheons.html">Past Speakers</a></li>
-            <li><a href="MENU/Tickets.html">Contact Information</a></li>
+   <nav id="mobile_menu"></nav>
+   <nav id="nav_menu">
+        <ul>
+        <li><a class="current" href="index.html">Home</a></li>
+        <li><a href="@">Speakers</a></li>
+        <li><a href="@">Luncheons</a></li>
+        <li><a href="@">Tickets</a></li>
+        <li><a href="@">About Us</a>
+          <ul>
+            <li><a href="@">Our History</a></li>
+            <li><a href="@">Board of Directors</a></li>
+            <li><a href="@">Past Speakers</a></li>
+            <li><a href="@">Contact Information</a></li>
           </ul>
         </li>
-        <li><a href="tickets.html">Tickets</a></li>
-        <li><a href="contact.html">Contact</a></li>
       </ul>
-    </nav>
+  </nav>
 
     <main>
       <section>
@@ -66,8 +73,7 @@
             on the ecology and evolution of late Cretaceous dinosaurs and he has
             conducted fieldwork in a number of countries in Africa.
           </p>
-          <p>
-            <a href="speakers/c6_sampson.html">Read more.</a>&nbsp;<b>Or meet us there!</b>
+          <p><a href="speakers/c6_sampson.html">Read more.</a>&nbsp;<b>Or meet us there!</b>
           </p>
         </article>
 
