--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </section>
 
       <aside>
-        <h2> Guest speakers</h2>
+        <h2> guest speakers</h2>
         <h3>October<br /><a href="speakers/brancaccio.html">David Brancaccio</a></h3>
         <img src="images/brancaccio75.jpg" alt="David Brancaccio photo" />
 
