--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles/c8_main.css" />
     <link rel="stylesheet" href="styles/slicknav.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Ensure slicknav.js is linked properly -->
+    <script src="https://cdn.jsdelivr.net/npm/slicknav@1.0.6/dist/slicknav.min.js"></script>
     <script type="text/javascript">
       $(document).ready(function(){
         $('#nav_menu').slicknav({prependTo:"#mobile_menu"});
@@ -16,7 +18,7 @@
 
   <body>
     <header>
-      <img src="images/town_hall_logo.gif" alt="Town Hall logo" height="80" />
+      <img src="images/town_hall_logo.gif" alt="San Joaquin Valley Town Hall logo" height="80" />
       <h2>San Joaquin Valley Town Hall</h2>
       <h3>
         Celebrating our <span class="shadow">75<sup>th</sup></span> Year
@@ -27,15 +29,15 @@
    <nav id="nav_menu">
         <ul>
         <li><a class="current" href="index.html">Home</a></li>
-        <li><a href="@">Speakers</a></li>
-        <li><a href="@">Luncheons</a></li>
-        <li><a href="@">Tickets</a></li>
-        <li><a href="@">About Us</a>
+        <li><a href="#">Speakers</a></li>
+        <li><a href="#">Luncheons</a></li>
+        <li><a href="#">Tickets</a></li>
+        <li><a href="#">About Us</a>
           <ul>
-            <li><a href="@">Our History</a></li>
-            <li><a href="@">Board of Directors</a></li>
-            <li><a href="@">Past Speakers</a></li>
-            <li><a href="@">Contact Information</a></li>
+            <li><a href="#">Our History</a></li>
+            <li><a href="#">Board of Directors</a></li>
+            <li><a href="#">Past Speakers</a></li>
+            <li><a href="#">Contact Information</a></li>
           </ul>
         </li>
       </ul>
@@ -86,18 +88,18 @@
       </section>
 
       <aside>
-        <h2> guest speakers</h2>
+        <h2>Guest Speakers</h2>
         <h3>October<br /><a href="speakers/brancaccio.html">David Brancaccio</a></h3>
-        <img src="images/brancaccio75.jpg" alt="David Brancaccio photo" />
+        <img src="images/brancaccio75.jpg" alt="David Brancaccio speaking at event" />
 
         <h3>November<br /><a href="speakers/sorkin.html">Andrew Ross Sorkin</a></h3>
-        <img src="images/sorkin75.jpg" alt="Andrew Ross Sorkin photo" />
+        <img src="images/sorkin75.jpg" alt="Andrew Ross Sorkin speaking at event" />
 
         <h3>January<br /><a href="speakers/chua.html">Amy Chua</a></h3>
-        <img src="images/chua75.jpg" alt="Amy Chua photo" />
+        <img src="images/chua75.jpg" alt="Amy Chua speaking at event" />
 
         <h3>February<br /><a href="speakers/c6_sampson.html">Scott Sampson</a></h3>
-        <img src="images/sampson75.jpg" alt="Scott Sampson photo" />
+        <img src="images/sampson75.jpg" alt="Scott Sampson speaking at event" />
       </aside>
     </main>
 
