--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Celebrating our <span class="shadow">75<sup>th</sup></span> Year
 <nav id="nav_menu">
 <ul>
 <li><a class="current" href="index.html">Home</a></li>
-<li><a href="@">Speakers</a></li>
+<li><a href="#">Speakers</a></li>
 <li><a href="@">Luncheons</a></li>
 <li><a href="@">Tickets</a></li>
 <li><a href="@">About Us</a>
